# st-openstlinux-application

./: README.md
dcmipp-isp-ctrl/: COPYING  Makefile  dcmipp-isp-ctrl.c  stm32-dcmipp-config.h  v4l2-controls.h  videodev2.h
rpmsg_fwu/: LICENSE  Makefile  README.md  m33_fwu_rpmsg.c  m33_fwu_rpmsg.h
touch-event-gtk-player/: Makefile.sdk  main.c  meson.build  play_pause.c
weston-cube/: COPYING  Makefile.sdk  config.h.in  meson.build
weston-cube/shared/: README  image-loader.c
weston-cube/src/: cube-common.c  cube-common.h  cube-smooth.c  cube-tex.c  cube-video.c  esTransform.c  esUtil.h  gst-decoder.c  readme  simple-st-egl-tex.c  simple-st-egl.h
